--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,8 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  equatable: ^1.1.1
+  flutter_bloc: ^3.2.0
 
 
 # For information on the generic Dart part of this file, see the
