--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,13 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  image_picker: ^0.6.3+4
+  image_cropper: any
+  circular_profile_avatar: ^1.0.6
+  datetime_picker_formfield: ^0.1.4
+  flutter_datetime_picker: 1.2.5
+  configurable_expansion_tile: ^0.0.0
+  flutter_multiselect: ^0.4.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -29,6 +36,7 @@ dev_dependencies:
     sdk: flutter
   equatable: ^1.1.1
   flutter_bloc: ^3.2.0
+  
 
 
 # For information on the generic Dart part of this file, see the
@@ -43,9 +51,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #  - images/a_dot_burr.jpeg
-  #  - images/a_dot_ham.jpeg
+  assets:
+    - assets/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
