--- a/.gitignore
+++ b/.gitignore
@@ -36,4 +36,8 @@ lib/generated_plugin_registrant.dart
 
 # Exceptions to above rules.
 !/packages/flutter_tools/test/data/dart_dependencies_test/**/.packages
-/lib/main.dart
+pubspec.lock
+ios/Flutter/Release.xcconfig
+ios/Flutter/Debug.xcconfig
+ios/Podfile
+lib/main.dart
