--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,8 @@ dependencies:
   flutter_datetime_picker: 1.2.5
   configurable_expansion_tile: ^0.0.0
   flutter_multiselect: ^0.4.0
+  bloc: ^4.0.0
+  flutter_bloc: ^4.0.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -35,7 +37,7 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   equatable: ^1.1.1
-  flutter_bloc: ^3.2.0
+  
   
 
 
