--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,8 +26,8 @@ dependencies:
   flutter_datetime_picker: 1.2.5
   configurable_expansion_tile: ^0.0.0
   flutter_multiselect: ^0.4.0
-  bloc: ^4.0.0
-  flutter_bloc: ^4.0.0
+  custom_radio_button: ^0.0.3
+  custom_radio: ^0.1.2
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -37,9 +37,8 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   equatable: ^1.1.1
+  flutter_bloc: ^3.2.0
   
-  
-
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
