--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -58,6 +58,7 @@ flutter:
     - assets/sounds/tapOnPaper.mp3
     - assets/sounds/tapOnPaperReverse.mp3
     - assets/images/buttonsImages/ 
+    - assets/images/buttonsImages/longPostIt/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
