--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   bordered_text: ^1.0.0
   custom_radio: ^0.1.2
   custom_radio_button: ^0.0.3
+  flutter_launcher_icons: ^0.7.5
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
@@ -39,7 +40,10 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
 
-  
+flutter_icons:
+  image_path: "assets/logo.png" 
+  android: true
+  ios: true  
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
