refactoring connexion page

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,6 +59,7 @@ flutter:
     - assets/sounds/tapOnPaperReverse.mp3
     - assets/images/buttonsImages/ 
     - assets/images/buttonsImages/longPostIt/
+    - assets/images/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
