--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -82,18 +82,20 @@ flutter:
   fonts:
     - family: Oswald
       fonts:
-        - asset: fonts/Oswald/Oswald-Light.ttf
-        - asset: fonts/Oswald/Oswald-Regular.ttf
-        - asset: fonts/Oswald/Oswald-SemiBold.ttf
+        - asset: assets/fonts/Oswald/Oswald-Light.ttf
+        - asset: assets/fonts/Oswald/Oswald-Regular.ttf
+        - asset: assets/fonts/Oswald/Oswald-SemiBold.ttf
     - family: IndieFlower
       fonts:
-        - asset: fonts/IndieFlower-Regular.ttf
+        - asset: assets/fonts/IndieFlower-Regular.ttf
     - family: Jost
       fonts:
-        - asset: fonts/Jost/Jost-ExtraLightItalic.ttf
-        - asset: fonts/Jost/Jost-Regular.ttf
-        - asset: fonts/Jost/Jost-Bold.ttf
-        
+        - asset: assets/fonts/Jost/Jost-ExtraLightItalic.ttf
+        - asset: assets/fonts/Jost/Jost-Regular.ttf
+        - asset: assets/fonts/Jost/Jost-Bold.ttf
+    - family: Nanum
+      fonts:
+        - asset: assets/fonts/NanumPenScript-Regular.ttf
   #       - asset: fonts/Schyler-Italic.ttf
   #         style: italic
   #   - family: Trajan Pro
