--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,8 @@ dependencies:
   custom_radio: ^0.1.2
   custom_radio_button: ^0.0.3
   audioplayers: ^0.15.1
+  firebase_auth: ^0.16.0
+  cloud_firestore: ^0.13.5
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
