--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,8 @@ dependencies:
   custom_radio_button: ^0.0.3
   flutter_launcher_icons: ^0.7.5
   audioplayers: ^0.15.1
+  firebase_auth: ^0.16.0
+  cloud_firestore: ^0.13.5
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
