--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,8 @@ dependencies:
   audioplayers: ^0.15.1
   firebase_auth: ^0.16.0
   cloud_firestore: ^0.13.5
+  autocomplete_textfield: ^1.7.3
+  flutter_spinkit: "^4.1.2"
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
