--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,7 +36,7 @@ dependencies:
   cloud_firestore: ^0.13.5
   autocomplete_textfield: ^1.7.3
   flutter_spinkit: "^4.1.2"
-
+  firebase_storage: ^3.1.5
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
