--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   autocomplete_textfield: ^1.7.3
   flutter_spinkit: "^4.1.2"
   firebase_storage: ^3.1.5
+  cached_network_image: ^2.2.0+1
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
