--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   cached_network_image: ^2.2.0+1
   provider: ^4.0.5+1
   equatable: ^1.2.2
+  logging: ^0.11.4
 
 dev_dependencies:
   flutter_test:
